[gd_scene load_steps=4 format=3 uid="uid://cly2pwnf886wn"]

[ext_resource type="Script" path="res://scripts/DialogueNode.gd" id="1_ixcqf"]
[ext_resource type="Script" path="res://scripts/DialogueArea.gd" id="2_1jkka"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sp4ft"]

[node name="DialogueNode" type="Node"]
script = ExtResource("1_ixcqf")
speakerName = "Bingus the tester"

[node name="DialogueArea" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 230.0
script = ExtResource("2_1jkka")

[node name="DialogueBox" type="NinePatchRect" parent="DialogueArea"]
layout_mode = 1
offset_right = 300.0
offset_bottom = 130.0
texture = SubResource("PlaceholderTexture2D_sp4ft")

[node name="NameTag" type="RichTextLabel" parent="DialogueArea"]
layout_mode = 1
offset_right = 260.0
offset_bottom = 25.0
mouse_filter = 2
text = "Name Tag"
scroll_active = false
shortcut_keys_enabled = false

[node name="DialogueText" type="RichTextLabel" parent="DialogueArea"]
layout_mode = 1
offset_left = 40.0
offset_top = 25.0
offset_right = 300.0
offset_bottom = 130.0
mouse_filter = 2
text = "Hello there default test text"
scroll_active = false
shortcut_keys_enabled = false

[connection signal="nextDialogueSignal" from="DialogueArea" to="." method="_on_dialogue_area_next_dialogue_signal"]
